--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --host=192.168.18.13",
         "build": "vite build"
     },
     "devDependencies": {
